--- a/src/app/modules/blogs/v2/edit/ckeditor/editor.component.html
+++ b/src/app/modules/blogs/v2/edit/ckeditor/editor.component.html
@@ -1,4 +1,4 @@
-<div class="m-ck-editor-wrapper">
+<div class="m-ck-editor-wrapper m-blog__body">
   <ckeditor
     *mIfBrowser
     [ngModel]="content"
