--- a/src/app/modules/blogs/view/view.html
+++ b/src/app/modules/blogs/view/view.html
@@ -94,7 +94,7 @@
   <div style="width:100%; padding:8px; position:relative;">
     <div
       m-code-highlight
-      class="mdl-cell mdl-cell--12-col minds-blog-body"
+      class="mdl-cell mdl-cell--12-col minds-blog-body m-blog__body"
       [innerHtml]="blog.description | safe"
       [ngClass]="{ 'm-mature-text': attachment.shouldBeBlurred(blog) }"
       [hidden]="!blog.description"
@@ -148,7 +148,7 @@
 <ng-container *mIfBrowser>
   <div
     class="mdl-grid blogs-grid"
-    style="max-width:660px"
+    style="max-width:660px; padding-bottom: 50px;"
     *ngIf="showComments && blog.guid"
   >
     <m-comments__tree [entity]="blog"> </m-comments__tree>
