--- a/src/app/modules/composer/components/title-bar/title-bar.component.html
+++ b/src/app/modules/composer/components/title-bar/title-bar.component.html
@@ -12,77 +12,5 @@
     <ng-container i18n="@@COMPOSER__CREATE_BLOG">Create Blog</ng-container>
   </div>
 
-  <m-dropdownMenu
-    triggerClass="m-composerTitleBar__menuButton"
-    menuClass="m-composerTitleBar__menu"
-    [anchorPosition]="{ top: '0', left: '0' }"
-    [menu]="menu"
-    [hidden]="isPosting$ | async"
-    data-cy="meatball-menu-trigger"
-  >
-    <m-icon iconId="more_vert"></m-icon>
-  </m-dropdownMenu>
+  <m-composerTitleBar__dropdown></m-composerTitleBar__dropdown>
 </div>
-
-<ng-template #menu>
-  <ul data-cy="meatball-menu">
-    <li>
-      <m-dropdownMenu
-        *ngIf="canChangeVisibility"
-        [menu]="visibilityMenu"
-        [anchorPosition]="{ top: '0', right: 'calc(100% - 4px)' }"
-        triggerClass="m-dropdownMenu__item"
-        data-cy="meatball-menu-visibility"
-      >
-        <span>Visibility</span>
-        <m-icon iconId="chevron_right"></m-icon>
-      </m-dropdownMenu>
-    </li>
-
-    <li>
-      <m-dropdownMenu
-        [menu]="licenseMenu"
-        [anchorPosition]="{ top: '0', right: 'calc(100% - 4px)' }"
-        triggerClass="m-dropdownMenu__item"
-        data-cy="meatball-menu-license"
-      >
-        <span>License</span>
-        <m-icon iconId="chevron_right"></m-icon>
-      </m-dropdownMenu>
-    </li>
-  </ul>
-</ng-template>
-
-<ng-template #visibilityMenu>
-  <ul data-cy="meatball-menu-visibility-menu">
-    <li
-      *ngFor="let visibilityItem of visibilityItems"
-      (click)="onVisibilityClick(visibilityItem.value)"
-    >
-      <span class="m-dropdownMenu__item">
-        <span>{{ visibilityItem.text }}</span>
-        <m-icon
-          iconId="check"
-          *ngIf="(accessId$ | async) === visibilityItem.value"
-        ></m-icon>
-      </span>
-    </li>
-  </ul>
-</ng-template>
-
-<ng-template #licenseMenu>
-  <ul data-cy="meatball-menu-license-menu">
-    <li
-      *ngFor="let licenseItem of licenseItems"
-      (click)="onLicenseClick(licenseItem.value)"
-    >
-      <span class="m-dropdownMenu__item">
-        <span>{{ licenseItem.text }}</span>
-        <m-icon
-          iconId="check"
-          *ngIf="(license$ | async) === licenseItem.value"
-        ></m-icon>
-      </span>
-    </li>
-  </ul>
-</ng-template>
