--- a/src/app/modules/media/modal/modal.component.html
+++ b/src/app/modules/media/modal/modal.component.html
@@ -156,11 +156,11 @@
             [style.height]="mediaHeight + 'px'"
             [@slowFade]="isLoading ? 'out' : 'in'"
           >
-            <m-blog-view
+            <!-- <m-blog-view
               [blog]="entity"
               [showActions]="false"
               [showComments]="false"
-            ></m-blog-view>
+            ></m-blog-view> -->
           </div>
 
           <!-- OVERLAY -->
