--- a/src/stylesheets/defaults.scss
+++ b/src/stylesheets/defaults.scss
@@ -1,11 +1,5 @@
 @import 'themes';
-/**
- * Colours
- */
-// $minds-white: #FFF;
-// $minds-grey: #e3e3e3;
-// $minds-blue: #4690D6;
-// $minds-amber: #FFC108;
+@import '../app/foundation/grid-values';
 
 /**
  * Padding, Margins and Offset
