--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
@@ -89,6 +89,15 @@
       </a>
     </li>
 
+    <li
+      class="m-dropdownList__item m-userMenuDropdown__item"
+      (click)="closeMenu()"
+    >
+      <a routerLink="/settings">
+        <span i18n="@@COMMON__SETTINGS">Settings</span>
+      </a>
+    </li>
+
     <ng-container *mIfFeature="'helpdesk'; else supportPages">
       <li
         class="m-dropdownList__item m-userMenuDropdown__item"
@@ -140,10 +149,19 @@
       <ng-container
         *ngFor="let link of footerLinks.slice(0, maxFooterLinks); let i = index"
       >
-        <a *ngIf="link.routerLink" [routerLink]="link.routerLink">
+        <a
+          *ngIf="link.routerLink"
+          [routerLink]="link.routerLink"
+          (click)="closeMenu()"
+        >
           {{ link.label }}
         </a>
-        <a *ngIf="link.href" [href]="link.href" target="_blank">
+        <a
+          *ngIf="link.href"
+          [href]="link.href"
+          target="_blank"
+          (click)="closeMenu()"
+        >
           {{ link.label }}
         </a>
         <span> · </span>
