--- a/src/app/modules/jobs/marketing/marketing.component.html
+++ b/src/app/modules/jobs/marketing/marketing.component.html
@@ -1,109 +1,49 @@
-<div class="m-marketing m-jobs--marketing">
-  <div class="m-marketing--hero">
-    <div class="m-marketing--hero--video">
-      <img
-        [src]="configs.get('cdn_assets_url') + 'assets/marketing/yellow-bg.jpg'"
-      />
-    </div>
-
-    <div class="m-marketing--hero--inner">
-      <div class="m-marketing--hero--slogans">
+<m-marketing
+  class="m-aux__marketing m-aux__marketing--hasHero"
+  [useFullWidth]="false"
+>
+  <div class="m-marketing__main">
+    <div class="m-aux__hero">
+      <div class="m-aux__heroInner">
         <h2 i18n="@@M__JOBS__MKT__MINDS_MARKETING_TITLE" *ngIf="user">
           <span>@</span>{{ user.username }}, want to join the team?
         </h2>
 
-        <h1
+        <h2
           i18n="@@M__JOBS__MKT__MINDS_MARKETING_TITLE__LOGGED__OUT"
           *ngIf="!user"
         >
           Hello there, want to join the team?
-        </h1>
-      </div>
-
-      <div class="m-marketing--hero--actions">
-        <img
-          [src]="configs.get('cdn_assets_url') + 'assets/icons/effort.svg'"
-        />
+        </h2>
       </div>
     </div>
+
+    <h1>Vacancies</h1>
+    <ul class="m-job--marketing--list">
+      <li>
+        Lead Full-Stack Developer -
+        <a
+          href="https://cdn-assets.minds.com/jobs/lead-full-stack.pdf?ref=com"
+          target="_blank"
+        >
+          pdf
+        </a>
+      </li>
+      <li>
+        Full-Stack Developer -
+        <a
+          href="https://cdn-assets.minds.com/jobs/full-stack.pdf?ref=com"
+          target="_blank"
+        >
+          pdf
+        </a>
+      </li>
+      <li>
+        Site Admin -
+        <a href="https://cdn-assets.minds.com/jobs/admin.pdf" target="_blank">
+          pdf
+        </a>
+      </li>
+    </ul>
   </div>
-
-  <section
-    class="m-marketing--section mdl-color--white"
-    style="padding-bottom: 0; padding-top: 0"
-  >
-    <div
-      class="m-marketing--section--subsection m-marketing--section--subsection--first"
-    >
-      <div class="m-marketing--section--subsection-container">
-        <div
-          class="m-marketing--section--subsection-left m-marketing--section--subsection-text"
-        >
-          <h2>Open Vacancies</h2>
-          <ul class="m-job--marketing--list">
-            <li>
-              Lead Full-Stack Developer -
-              <a
-                href="https://cdn-assets.minds.com/jobs/lead-full-stack.pdf?ref=com"
-                target="_blank"
-              >
-                View (PDF)
-              </a>
-            </li>
-            <li>
-              Full-Stack Developer -
-              <a
-                href="https://cdn-assets.minds.com/jobs/full-stack.pdf?ref=com"
-                target="_blank"
-              >
-                View (PDF)
-              </a>
-            </li>
-            <li>
-              Site Admin -
-              <a
-                href="https://cdn-assets.minds.com/jobs/admin.pdf"
-                target="_blank"
-              >
-                View (PDF)
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div
-          class="m-marketing--section--subsection-right m-marketing--section--subsection-image"
-          style="text-align: center"
-        >
-          <img
-            [src]="configs.get('cdn_assets_url') + 'assets/logos/bulb.jpg'"
-          />
-        </div>
-      </div>
-    </div>
-
-    <div
-      class="m-marketing--section--subsection m-marketing--section--subsection--thin"
-    >
-      <div class="m-marketing--section--subsection-container">
-        <ul class="m-marketing--icon-attributions">
-          <li>
-            <img
-              [src]="configs.get('cdn_assets_url') + 'assets/icons/effort.svg'"
-            />
-            icon was made by
-            <a href="http://www.freepik.com" title="Freepik">Freepik</a> and
-            licensed
-            <a
-              href="http://creativecommons.org/licenses/by/3.0/"
-              title="Creative Commons BY 3.0"
-              target="_blank"
-              >CC 3.0 BY</a
-            >
-          </li>
-        </ul>
-      </div>
-    </div>
-  </section>
-</div>
-
-<m-footer></m-footer>
+</m-marketing>
