--- a/src/app/modules/marketing/footer.component.html
+++ b/src/app/modules/marketing/footer.component.html
@@ -1,285 +1,290 @@
 <div class="m-marketing__footer">
-  <div class="m-marketingFooter__columns">
-    <div
-      class="m-marketingFooter__languageBar"
-      *mIfFeature="'localization-2020'"
-    >
-      <m-language__bar></m-language__bar>
-
-      <div
-        class="m-marketing__sep m-marketing__sep--dashed m-marketing__sep--big"
-      ></div>
-    </div>
-  </div>
-  <!--Main body & links-->
-  <div class="m-grid m-marketingFooter__columns">
-    <div
-      class="m-grid__column-4 m-grid__column-12--mobile m-marketingFooter__column m-marketingFooter__brandColumn"
-    >
-      <div class="m-marketingFooter__mindsLogo"></div>
-
-      <h4 class="m-marketingFooter__sloganText" i18n="@@TAKE_BACK_CONTROL">
-        Take back control of your social media
-      </h4>
-      <div class="m-marketingFooter__text" *ngIf="!isMobile">
-        &copy; {{ year }} Minds, Inc.
-      </div>
-    </div>
-
-    <div
-      class="m-grid__column-2 m-grid__column-12--mobile m-marketingFooter__column"
-    >
-      <h4 i18n="@@COMMON_FOOTER__ABOUT">About</h4>
-
-      <ul>
-        <li>
-          <a routerLink="/mobile" i18n="@@COMMON_FOOTER__MOBILE">
-            Mobile
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/jobs" i18n="@@COMMON_FOOTER__CAREERS">
-            Careers
-          </a>
-        </li>
-
-        <li hidden>
-          <a href="https://carta.com/minds" i18n="@@COMMON_FOOTER__INVESTORS">
-            Investors
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/minds/blogs" i18n="@@COMMON_FOOTER__BLOG">
-            Blog
-          </a>
-        </li>
-
-        <li>
-          <a
-            href="https://cdn-assets.minds.com/front/dist/en/assets/documents/Whitepaper-v0.5.pdf"
-            target="_blank"
-            i18n="@@COMMON_FOOTER__WHITEPAPER"
-          >
-            Whitepaper
-          </a>
-        </li>
-
-        <li>
-          <a
-            href="https://change.minds.com/"
-            target="_blank"
-            i18n="@@COMMON_FOOTER__EVENTS"
-          >
-            Events
-          </a>
-        </li>
-
-        <li>
-          <a
-            href="https://teespring.com/stores/minds"
-            i18n="@@COMMON_FOOTER__STORE"
-          >
-            Store
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <div
-      class="m-grid__column-2 m-grid__column-12--mobile m-marketingFooter__column"
-    >
-      <h4 i18n="@@COMMON_FOOTER__BUSINESS">Business</h4>
-
-      <ul>
-        <li>
-          <a routerLink="/upgrades" i18n="@@COMMON_FOOTER__UPGRADE">
-            Upgrade
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/token" i18n="@@COMMON_FOOTER__TOKEN">
-            Token
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/plus" i18n="@@COMMON_FOOTER__PLUS">
-            Plus
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/pro" i18n="@@COMMON_FOOTER__PRO">
-            Pro
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/pay" i18n="@@COMMON_FOOTER__PAY">
-            Pay
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/nodes" i18n="@@COMMON_FOOTER__NODES">
-            Nodes
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/boost" i18n="@@COMMON_FOOTER__BOOST">
-            Boost
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/rewards" i18n="@@COMMON_FOOTER__REWARDS">
-            Rewards
-          </a>
-        </li>
-
-        <li>
-          <a
-            routerLink="/youtube-migration"
-            i18n="@@COMMON_FOOTER__YOUTUBE_MIGRATION"
-          >
-            YouTube Migration
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <div
-      class="m-grid__column-2 m-grid__column-12--mobile m-marketingFooter__column"
-    >
-      <h4 i18n="@@COMMON_FOOTER__DEVELOPERS">Developers</h4>
-
-      <ul>
-        <li>
-          <a
-            href="https://developers.minds.com"
-            target="_blank"
-            i18n="@@COMMON_FOOTER__DOCUMENTATION"
-          >
-            Documentation
-          </a>
-        </li>
-
-        <li>
-          <a
-            routerLink="/groups/profile/365903183068794880"
-            i18n="@@COMMON_FOOTER__COMMUNITY"
-          >
-            Community
-          </a>
-        </li>
-
-        <li>
-          <a
-            href="https://gitlab.com/minds"
-            target="_blank"
-            i18n="@@COMMON_FOOTER__CODE"
-          >
-            Code
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/canary" i18n="@@COMMON_FOOTER__CANARY">
-            Canary
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/branding" i18n="@@COMMON_FOOTER__BRANDING">
-            Branding
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <div
-      class="m-grid__column-2 m-grid__column-12--mobile m-marketingFooter__column"
-    >
-      <h4 i18n="@@COMMON_FOOTER__SUPPORT">Support</h4>
-
-      <ul>
-        <li>
-          <a routerLink="/help" i18n="@@COMMON_FOOTER__HELP_DESK">
-            Help Desk
-          </a>
-        </li>
-
-        <li>
-          <a
-            routerLink="/groups/profile/100000000000000681"
-            i18n="@@COMMON_FOOTER__COMMUNITY"
-          >
-            Community
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/localization" i18n="@@COMMON_FOOTER__LANGUAGES">
-            Languages
-          </a>
-        </li>
-
-        <li>
-          <a
-            href="https://status.minds.com"
-            target="_blank"
-            i18n="@@COMMON_FOOTER__STATUS"
-          >
-            Status
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-
+  <!-- ------------------------------------------ -->
+  <!-- LANGUAGE BAR -->
+  <!-- ------------------------------------------ -->
   <div
-    class="m-marketing__sep m-marketing__sep--dashed m-marketing__sep--big"
-  ></div>
+    class="m-marketingFooter__section--language"
+    *mIfFeature="'localization-2020'"
+  >
+    <m-language__bar></m-language__bar>
+  </div>
+  <!-- ------------------------------------------ -->
+  <!-- LINE -->
+  <!-- ------------------------------------------ -->
+  <div class="m-marketingFooter__sep"></div>
 
-  <div class="m-grid m-marketingFooter__columns">
-    <div
-      class="m-grid__column-12 m-grid__column-12--mobile m-marketingFooter__column"
-    >
-      <div class="m-marketingFooter__text" *ngIf="isMobile">
-        &copy; {{ year }} Minds, Inc.
+  <!-- ------------------------------------------ -->
+  <!-- MAIN: LOGO AND LINKS -->
+  <!-- ------------------------------------------ -->
+  <div class="m-marketingFooter__section--main">
+    <div class="m-marketingFooter__mainSubsection--brand">
+      <div>
+        <div class="m-marketingFooter__logo"></div>
+        <h4 class="m-marketingFooter__slogan" i18n="@@TAKE_BACK_CONTROL">
+          Take back control of your social media
+        </h4>
+        <div class="m-marketingFooter__text">&copy; {{ year }} Minds, Inc.</div>
       </div>
-      <ul class="m-marketingFooter__inlineList m-marketingFooter__legalLinks">
-        <li>
-          <a routerLink="/p/terms" i18n="@@COMMON_FOOTER__TERMS_OF_SERVICE">
-            Terms of Service
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/p/privacy" i18n="@@COMMON_FOOTER__PRIVACY_POLICY">
-            Privacy Policy
-          </a>
-        </li>
-
-        <li>
-          <a
-            routerLink="/content-policy"
-            i18n="@@COMMON_FOOTER__CONTENT_POLICY"
-          >
-            Content Policy
-          </a>
-        </li>
-
-        <li>
-          <a routerLink="/p/dmca" i18n="@@COMMON_FOOTER__DMCA">
-            DMCA
-          </a>
-        </li>
-      </ul>
     </div>
+    <div class="m-marketingFooter__mainSubsection--links">
+      <div class="m-marketingFooter__mainLinksCategory">
+        <h4 i18n="@@COMMON_FOOTER__ABOUT">About</h4>
+
+        <ul>
+          <li>
+            <a routerLink="/mobile" i18n="@@COMMON_FOOTER__MOBILE">
+              Mobile
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/jobs" i18n="@@COMMON_FOOTER__CAREERS">
+              Careers
+            </a>
+          </li>
+
+          <li hidden>
+            <a href="https://carta.com/minds" i18n="@@COMMON_FOOTER__INVESTORS">
+              Investors
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/minds/blogs" i18n="@@COMMON_FOOTER__BLOG">
+              Blog
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="https://cdn-assets.minds.com/front/dist/en/assets/documents/Whitepaper-v0.5.pdf"
+              target="_blank"
+              i18n="@@COMMON_FOOTER__WHITEPAPER"
+            >
+              Whitepaper
+            </a>
+          </li>
+
+          <li>
+            <a
+              routerLink="/p/billofrights"
+              i18n="@@COMMON_FOOTER__BILL_OF_RIGHTS"
+            >
+              Bill of Rights
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="https://change.minds.com/"
+              target="_blank"
+              i18n="@@COMMON_FOOTER__EVENTS"
+            >
+              Events
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="https://teespring.com/stores/minds"
+              i18n="@@COMMON_FOOTER__STORE"
+            >
+              Store
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="m-marketingFooter__mainLinksCategory">
+        <h4 i18n="@@COMMON_FOOTER__BUSINESS">Business</h4>
+
+        <ul>
+          <li>
+            <a routerLink="/upgrades" i18n="@@COMMON_FOOTER__UPGRADE">
+              Upgrade
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/token" i18n="@@COMMON_FOOTER__TOKEN">
+              Token
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/plus" i18n="@@COMMON_FOOTER__PLUS">
+              Plus
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/pro" i18n="@@COMMON_FOOTER__PRO">
+              Pro
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/pay" i18n="@@COMMON_FOOTER__PAY">
+              Pay
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/nodes" i18n="@@COMMON_FOOTER__NODES">
+              Nodes
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/boost" i18n="@@COMMON_FOOTER__BOOST">
+              Boost
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/rewards" i18n="@@COMMON_FOOTER__REWARDS">
+              Rewards
+            </a>
+          </li>
+
+          <li>
+            <a
+              routerLink="/youtube-migration"
+              i18n="@@COMMON_FOOTER__YOUTUBE_MIGRATION"
+            >
+              YouTube Migration
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="m-marketingFooter__mainLinksCategory">
+        <h4 i18n="@@COMMON_FOOTER__DEVELOPERS">Developers</h4>
+
+        <ul>
+          <li>
+            <a
+              href="https://developers.minds.com"
+              target="_blank"
+              i18n="@@COMMON_FOOTER__DOCUMENTATION"
+            >
+              Docs
+            </a>
+          </li>
+
+          <li>
+            <a
+              routerLink="/groups/profile/365903183068794880"
+              i18n="@@COMMON_FOOTER__COMMUNITY"
+            >
+              Community
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="https://gitlab.com/minds"
+              target="_blank"
+              i18n="@@COMMON_FOOTER__CODE"
+            >
+              Code
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/canary" i18n="@@COMMON_FOOTER__CANARY">
+              Canary
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/branding" i18n="@@COMMON_FOOTER__BRANDING">
+              Branding
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="m-marketingFooter__mainLinksCategory">
+        <h4 i18n="@@COMMON_FOOTER__SUPPORT">Support</h4>
+
+        <ul>
+          <li>
+            <a routerLink="/help" i18n="@@COMMON_FOOTER__HELP_DESK">
+              Help Desk
+            </a>
+          </li>
+          <li>
+            <a routerLink="/p/contact" i18n="@@COMMON_FOOTER__CONTACT">
+              Contact
+            </a>
+          </li>
+
+          <li>
+            <a
+              routerLink="/groups/profile/100000000000000681"
+              i18n="@@COMMON_FOOTER__COMMUNITY"
+            >
+              Community
+            </a>
+          </li>
+
+          <li>
+            <a routerLink="/localization" i18n="@@COMMON_FOOTER__LANGUAGES">
+              Languages
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="https://status.minds.com"
+              target="_blank"
+              i18n="@@COMMON_FOOTER__STATUS"
+            >
+              Status
+            </a>
+          </li>
+          <li>
+            <a routerLink="/jobs" i18n="@@COMMON_FOOTER__JOBS">
+              Jobs
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- ------------------------------------------ -->
+  <!-- LINE -->
+  <!-- ------------------------------------------ -->
+  <div class="m-marketingFooter__sep"></div>
+  <!-- ------------------------------------------ -->
+  <!-- LEGAL LINKS -->
+  <!-- ------------------------------------------ -->
+  <div class="m-marketingFooter__section--legal">
+    <ul>
+      <li>
+        <a routerLink="/p/terms" i18n="@@COMMON_FOOTER__TERMS_OF_SERVICE">
+          Terms of Service
+        </a>
+      </li>
+
+      <li>
+        <a routerLink="/p/privacy" i18n="@@COMMON_FOOTER__PRIVACY_POLICY">
+          Privacy Policy
+        </a>
+      </li>
+
+      <li>
+        <a routerLink="/content-policy" i18n="@@COMMON_FOOTER__CONTENT_POLICY">
+          Content Policy
+        </a>
+      </li>
+
+      <li>
+        <a routerLink="/p/dmca" i18n="@@COMMON_FOOTER__DMCA">
+          DMCA
+        </a>
+      </li>
+    </ul>
   </div>
 </div>
