--- a/src/app/modules/report/marketing/marketing.component.html
+++ b/src/app/modules/report/marketing/marketing.component.html
@@ -1,31 +1,17 @@
-<div class="m-marketing m-reports__marketing">
-  <div class="m-marketing__hero">
-    <div class="m-marketingHero__inner">
-      <div class="m-marketingHero__overlay"></div>
+<m-marketing class="m-aux__marketing" [useFullWidth]="false">
+  <div class="m-marketing__main">
+    <h1>Content Policy</h1>
 
-      <div class="m-marketingHero__slogans">
-        <h1 i18n="@@PLUS__MKT__PLUS_TITLE">Content Policy</h1>
-        <h3 i18n="@@PLUS__MKT__PLUS_DESC">
-          The goal of Minds is to have fair, transparent and ethical moderation
-          practices.
-        </h3>
-
-        <button
-          class="m-btn m-btn--slim"
-          (click)="startJuryDuty()"
-          *ngIf="session.isAdmin()"
-        >
-          Start Admin Review
-        </button>
-      </div>
-
-      <div class="m-marketingHero__actions">
-        <i class="material-icons">gavel</i>
-      </div>
-    </div>
-  </div>
-
-  <div class="m-marketing__contents m-reportMarketing__section">
+    <m-shadowboxSubmitButton
+      *ngIf="session.isAdmin()"
+      (click)="startJuryDuty()"
+    >
+      Start Admin Review
+    </m-shadowboxSubmitButton>
+    <p>
+      The goal of Minds is to have fair, transparent and ethical moderation
+      practices.
+    </p>
     <p>
       To ensure that decisions are made as democratically as possible, we
       developed a Jury System based on the
@@ -50,13 +36,18 @@
     </p>
 
     <p>The current content moderation system functions as follows:</p>
-
-    <img
+    <ol>
+      <li>User reports content or channel</li>
+      <li>Minds staff accepts or rejects report</li>
+      <li>If accepted, user is notified and given chance to appeal</li>
+      <li>If appealed, a jury of Minds users votes on appeal</li>
+    </ol>
+    <!-- <img
       src="{{ cdnAssetsUrl }}assets/screenshots/flow.png"
       style="max-width: 90%;"
-    />
+    /> -->
 
-    <h4>Strike Offense</h4>
+    <h2>Strike Offense</h2>
     <p>
       Users will receive a strike for certain violations of the Content Policy.
       Users will be notified about the strike, which term was violated, and
@@ -66,20 +57,20 @@
 
     <p>The following violations will result in a strike:</p>
     <p>
-      Untagged NSFW Post (three strikes required for each individual NSFW
-      category)
+      <b> Untagged NSFW Post</b> (three strikes required for each individual
+      NSFW category)
     </p>
     <ul>
-      <li>Strike 1 = Warning</li>
-      <li>Strike 2 = 2nd Warning</li>
-      <li>Strike 3 = Full channel marked with NSFW category</li>
+      <li>Strike 1 - Warning</li>
+      <li>Strike 2 - 2nd Warning</li>
+      <li>Strike 3 - Full channel marked with NSFW category</li>
     </ul>
 
-    <p>Harassment and Spam</p>
+    <p><b>Harassment and Spam</b></p>
     <ul>
-      <li>Strike 1 = Warning</li>
-      <li>Strike 2 = 2nd Warning</li>
-      <li>Strike 3 = Ban</li>
+      <li>Strike 1 - Warning</li>
+      <li>Strike 2 - 2nd Warning</li>
+      <li>Strike 3 - Ban</li>
     </ul>
 
     <p>
@@ -106,7 +97,7 @@
       use of a bot.
     </p>
 
-    <h4>Immediate Ban Offense</h4>
+    <h2>Immediate Ban Offense</h2>
 
     <p>
       Users will be immediately banned for certain violations of the Content
@@ -129,7 +120,7 @@
       <li>Incites a true threat of violence</li>
     </ul>
 
-    <h4>Boost Policy</h4>
+    <h2>Boost Policy</h2>
     <p>
       Boost is the advertising network on Minds. Users may exchange Minds Tokens
       to “Boost” their content and receive views from the network. Users may not
@@ -139,11 +130,11 @@
 
     <ul>
       <li>Appeals on a moderation decision</li>
-      <li>Exceeds Boost rate limits;</li>
-      <li>Is a Help & Support request;</li>
-      <li>Is selling Minds Tokens;</li>
+      <li>Exceeds Boost rate limits</li>
+      <li>Is a Help & Support request</li>
+      <li>Is selling Minds Tokens</li>
       <li>Contains content from a banned user</li>
-      <li>Onchain payment failed</li>
+      <li>On-chain payment failed</li>
       <li>Original post has been removed</li>
     </ul>
 
@@ -153,7 +144,7 @@
       believe it should be accepted.
     </p>
 
-    <h4>Spam Policy</h4>
+    <h2>Spam Policy</h2>
     <p>
       Spam is not allowed on Minds. Spam may take many forms, and our rules are
       intended to cover a range of prohibited behavior, including: Repeated,
@@ -170,25 +161,25 @@
       in a strike for your channel. In cases where the behavior is deemed to be
       malicious or harmful, the account will result in an immediate ban.
     </p>
-  </div>
 
-  <div class="m-marketing__contents m-reportMarketing__stats">
-    <h4>Last 30 days</h4>
-    <div class="m-layout__row">
-      <div class="m-layout__cell">
-        <b>{{ stats.actioned | number }}</b>
-        <span>Actions Taken by Minds</span>
-      </div>
-      <div class="m-layout__cell">
-        <b>{{ stats.appealed | number }}</b>
-        <span>Appeals</span>
-      </div>
-      <div class="m-layout__cell">
-        <b>{{ stats.overturned | number }}</b>
-        <span>Actions Overturned</span>
+    <div class="m-reportMarketing__stats">
+      <h2>Last 30 days</h2>
+      <div class="m-layout__row">
+        <div class="m-layout__cell">
+          <b>{{ stats.actioned | number }}</b>
+          <span>Actions Taken by Minds</span>
+        </div>
+        <div class="m-layout__cell">
+          <b>{{ stats.appealed | number }}</b>
+          <span>Appeals</span>
+        </div>
+        <div class="m-layout__cell">
+          <b>{{ stats.overturned | number }}</b>
+          <span>Actions Overturned</span>
+        </div>
       </div>
     </div>
+    <!-- </div> -->
+    <!-- <m-marketing__footer></m-marketing__footer> -->
   </div>
-</div>
-
-<m-footer></m-footer>
+</m-marketing>
