--- a/src/app/modules/admin/boosts/boosts.html
+++ b/src/app/modules/admin/boosts/boosts.html
@@ -81,22 +81,17 @@
         class="mdl-card mdl-shadow--8dp"
         *ngIf="boost.entity.subtype == 'image'"
       ></minds-card-image>
-      <minds-card-blog
-        [object]="boost.entity"
-        class="mdl-card mdl-shadow--8dp"
-        *ngIf="boost.entity.subtype == 'blog'"
-      ></minds-card-blog>
+
       <minds-card-user
         [object]="boost.entity"
         class="mdl-card mdl-shadow--8dp"
         *ngIf="boost.entity.type == 'user'"
       ></minds-card-user>
-      <minds-activity
-        [object]="boost.entity"
-        class="mdl-card mdl-shadow--8dp"
-        *ngIf="boost.entity.type == 'activity'"
+      <m-activity
+        [entity]="boost.entity"
+        *ngIf="boost.entity.type == 'activity' || boost.entity.subtype === 'blog'"
         [attr.data-minds-activity-guid]="boost.entity.guid"
-      ></minds-activity>
+      ></m-activity>
       <minds-card-group
         [group]="boost.entity"
         class="mdl-card mdl-shadow--8dp"
