--- a/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
+++ b/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
@@ -39,7 +39,7 @@
     </div>
   </div>
   <button class="button button-primary" (click)="subscribeToNotifications()">
-    Subscribe
+    Subscribing
   </button>
   <div class="m-form__buttonsContainer">
     <m-shadowboxSubmitButton
