Updated composer modal to sit higher up on screen

--- a/src/app/modules/modals/v2/modal-v2.component.scss
+++ b/src/app/modules/modals/v2/modal-v2.component.scss
@@ -23,7 +23,7 @@
   .m-overlay-modal {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     position: static;
     padding: 0;
