--- a/src/app/modules/composer/components/popup/popup.component.scss
+++ b/src/app/modules/composer/components/popup/popup.component.scss
@@ -22,26 +22,20 @@ m-composer__popup {
 }
 
 .m-composer__popup {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  bottom: auto;
   min-height: 477px;
   max-height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  transform: translateY(-50%);
 
   @include m-theme() {
     background: themed($m-bgColor--secondary);
   }
 
   @media screen and (max-width: $max-mobile) {
-    top: 0;
-    bottom: 0;
+    min-height: 100%;
+    min-width: 100%;
     overflow: scroll;
     transform: initial;
   }
