update to crowdin link on localization page

--- a/src/app/modules/i18n/marketing.component.html
+++ b/src/app/modules/i18n/marketing.component.html
@@ -10,10 +10,7 @@
           Help translate Minds into every global language
         </h3>
         <m-shadowboxSubmitButton
-          ><a
-            href="https://poeditor.com/join/project/A45VLCwD0Y"
-            target="_blank"
-          >
+          ><a href="https://translate.minds.com/" target="_blank">
             <ng-container i18n="@@I18N__CONTRIBUTE_ACTION"
               >Contribute</ng-container
             ></a
