--- a/src/app/modules/blogs/v2/edit/editor-base.component.html
+++ b/src/app/modules/blogs/v2/edit/editor-base.component.html
@@ -8,14 +8,11 @@
   <!-- Legacy blog prompt -->
   <div
     class="m-blogEditor__legacyPrompt"
-    *ngIf="
-      (service.guid$ | async) != 'new' &&
-      (service.schedule$ | async) < 1600086270
-    "
+    *ngIf="(service.editorVersion$ | async) < 2"
   >
     <p>
-      You are editing a blog that created with an older editor. Media embeds may
-      not work and should be re-added when saving this blog.
+      You are editing a blog that was created with an older editor. Media embeds
+      may not work and should be re-added when saving this blog.
     </p>
   </div>
 
