Revert "Merge branch 'fix/announcement-under-layout-3769' into 'master'"
This reverts commit fca5e3434dfc425d0ade2fd034acfdba36a8fd46, reversing
changes made to cfb54031d7c41d5f5eca41ff1838b2251373b19f.

--- a/src/app/common/components/announcements/announcement.component.scss
+++ b/src/app/common/components/announcements/announcement.component.scss
@@ -13,7 +13,7 @@ m-announcement {
     position: fixed;
     width: 100%;
     height: $m-announcment-height;
-    z-index: 9999999;
+    z-index: 998;
     display: flex;
     flex-direction: row;
     align-items: center;
