--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.html
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.html
@@ -7,6 +7,7 @@
       isVideo: contentType === 'video'
     }"
     [style.maxHeight.px]="mediaHeight"
+    (click)="$event.stopPropagation(); unlock()"
     *ngIf="entity.wire_threshold && init"
   >
     <!-- ------------------------------ -->
