--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
@@ -15,6 +15,7 @@ m-wire--lock-screen.m-wire--lock-screen-2020 {
     width: 100%;
     position: relative;
     z-index: 0;
+    cursor: pointer;
     @include m-theme() {
       color: themed($m-white-always);
     }
