--- a/src/app/modules/wallet/v2/cash/settings/cash-onboarding/cash-onboarding.component.html
+++ b/src/app/modules/wallet/v2/cash/settings/cash-onboarding/cash-onboarding.component.html
@@ -139,7 +139,7 @@
           <!-- -------------------------------------------- -->
           <div
             class="m-walletForm__field--text stretchedField"
-            *ngIf="isCountry(['HK', 'SG'])"
+            *ngIf="isCountry(['HK', 'SG', 'IN'])"
           >
             <div class="m-walletForm__row--label">
               <label
@@ -153,6 +153,12 @@
                 *ngIf="isCountry(['SG'])"
                 i18n="@@CASH_ONBOARDING__SG_ID_CARD"
                 >National Registration Identity Card (NRIC)</label
+              >
+              <label
+                for="personalIdNumber"
+                *ngIf="isCountry(['IN'])"
+                i18n="@@CASH_ONBOARDING__IN_PAN_NUMBER"
+                >Permanent Account Number (PAN)</label
               >
             </div>
             <div class="m-walletForm__row--input">
@@ -258,7 +264,7 @@
 
           <div
             class="m-walletForm__field--text stretchedField"
-            *ngIf="isCountry(['AU', 'CA', 'IE'])"
+            *ngIf="isCountry(['AU', 'CA', 'IE', 'IN'])"
           >
             <div class="m-walletForm__row--label">
               <label for="state" i18n="@@CASH_ONBOARDING__STATE_PROVINCE"
